2013-04-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-autoload-ensure-default-file):
	Add current dir to the load-path.
	(package-generate-autoloads): Don't rely on
	autoload-ensure-default-file.

2013-04-26  Reuben Thomas  <rrt@sc3d.org>

	* textmodes/remember.el (remember-store-in-files): Document that
	the file name format is passed to `format-time-string'.

2013-04-26  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-sync-function-file-names): New function.
	(octave-mode): Use it in before-save-hook.

2013-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/tabulated-list.el (tabulated-list-mode): Disable undo
	(bug#14274).

	* progmodes/octave.el (octave-smie-forward-token): Properly skip
	\n and comment, even if it's not an implicit ; (bug#14218).

2013-04-26  Glenn Morris  <rgm@gnu.org>

	* subr.el (read-number): Once more use `read' rather than
	`string-to-number', to trap non-numeric input.  (Bug#14254)

2013-04-26  Erik Charlebois  <erikcharlebois@gmail.com>

	* emacs-lisp/syntax.el (syntax-propertize-multiline):
	Use `syntax-multiline' text property consistently instead of
	`font-lock-multiline'. (bug#14237).

2013-04-26  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/shadow.el (list-load-path-shadows):
	No longer necessary to check for duplicate simple.el, since
	2012-07-07 change to init_lread to not include installation lisp
	directories in load-path when running uninstalled.  (Bug#14270)

2013-04-26  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-submit-bug-report): Obsolete.
	(octave-mode, inferior-octave-mode): Use setq-local.
	(octave-not-in-string-or-comment-p): Rename to
	octave-in-string-or-comment-p.
	(octave-in-comment-p, octave-in-string-p)
	(octave-in-string-or-comment-p): Replace defsubst with defun.

2013-04-25  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (distclean): Remove $(lisp)/loaddefs.el~.

2013-04-25  Bastien Guerry  <bzg@gnu.org>
