@@ -1,3 +1,10 @@
+2013-04-27  Ingo Lohmar  <i.lohmar@gmail.com>  (tiny change)
+
+	* ls-lisp.el (ls-lisp-insert-directory): If no files are
+	displayed, move point to after the totals line.  See
+	http://lists.gnu.org/archive/html/emacs-devel/2013-04/msg00677.html
+	for the details.
+
 2013-04-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/package.el (package-autoload-ensure-default-file):
